<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mattoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        app:title="Creating a task"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:startIconDrawable="@android:drawable/ic_menu_edit"
        android:layout_marginTop="16dp"
        android:hint="@string/til_hint_your_new_task_title_here"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/mattoolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/mattoolbar" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_task_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/til_new_task_title"
        app:startIconDrawable="@android:drawable/ic_menu_my_calendar"
        android:hint="@string/til_hint_add_new_task_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_new_task_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:hint="@string/til_hint_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        app:startIconDrawable="@android:drawable/ic_menu_recent_history"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/til_new_task_date"
        app:layout_constraintTop_toTopOf="@id/til_new_task_date"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_new_task"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/mbtn_new_task"
        android:textAllCaps="false"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/mbtn_new_task"
        android:text="@string/mbtn_cancel"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>